Layout issues

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,11 @@
 body {
-    background: #eee;
+    background: #e0e0e0;
     word-break: break-all;
     white-space: normal;
+    overflow: hidden;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 body,
